# slack-jira-agent

./: .env.example  README.md  approval_hierarchy.json  config.py  main.py  pyproject.toml
graph/: agent.py
handlers/: jira_webhook.py  slack_events.py
prompts/: prompt.py
tools/: approval_agent.py  aws_agent.py  communication.py  email_agent.py  jira_tools.py  organization_agent.py  slack_agent.py  ticket_agent.py
